--- a/windows/windows/windows.vcxproj
+++ b/windows/windows/windows.vcxproj
@@ -27,6 +27,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{FF1561F6-F89B-40FF-95CA-273FDC0E0058}</ProjectGuid>
     <RootNamespace>windows</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
